# Resume_Parser_2

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202601010001_initial_schema.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: analytics.py  auth.py  candidates.py  matching.py  settings.py  uploads.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: entities.py
apps/api/app/schemas/: analytics.py  candidate.py
apps/api/app/services/: matching.py  parser.py
apps/api/app/workers/: celery_app.py  tasks.py
apps/api/tests/: test_api.py
apps/web/: next-env.d.ts  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/admin/: page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/candidates/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/matching/: page.tsx
apps/web/app/upload/: page.tsx
apps/web/components/: query-provider.tsx
apps/web/components/candidates/: candidate-table.tsx  matching-workspace.tsx  upload-experience.tsx
apps/web/components/dashboard/: app-shell.tsx  dashboard-overview.tsx
apps/web/lib/: api.ts
apps/web/tests/: app.spec.ts  smoke.test.tsx
database/: er-diagram.md  schema.sql
docker/: api.Dockerfile  web.Dockerfile
docs/: api.md  architecture.md  deployment.md
(+8 files in other folders)
