[project]
name = "resume-parser-api"
version = "1.0.0"
description = "FastAPI backend for Resume Parser AI"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.14.0",
    "celery>=5.4.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "openai>=1.58.1",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.4"
]

[build-system]
requires = [
    "setuptools>=75.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = [
    "alembic*",
    "tests*"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]